manifests/montioring/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: grafana
  template:
    spec:
      containers:
        - image: grafana/grafana
          name: grafana
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 2500Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: data
            - name: grafana-ini
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini

      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: grafana-ini
          configMap:
            name: grafana-conf
